--- a/main.html
+++ b/main.html
@@ -10,21 +10,17 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a href="controls">audio 1</a></li>
-			<li><a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">Link 2</a></li>
-			<li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">Link 3</a></li>
+			<li><a href="google.com" >google</a></li>
+			<li><a href="instagram.com" >instagram.com</a></li>
+			<li><a href="facebook.com" >facebook.com</a></li>
 		</ul>
 	</nav>
-	<h2>3 random audios</h2>
-	<audio controls>
-	  <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-	</audio>
-	<audio controls>
-		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
-	</audio>
-	<audio controls>
-		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">	
-	</audio>
+	<section>
+		<h1> 3 random audios</h1>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+	</section>
 
     <script type="text/javascript" src="./script.js">
 </script>
